<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiFeedReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon">Icon</string>
    <string name="clear_items">Clear Items</string>
    <string name="load_items">Load Items</string>
    <string name="start_update">Start periodic update</string>
    <string name="stop_update">Stop periodic update</string>
    <string name="load_pages">Load Pages</string>
    <string name="clear_pages">Clear Pages</string>
    <string name="reset_pages">Reset Pages</string>
    <string name="search">Search</string>

</resources>
