<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_clear_pages"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clear_pages"/>
    <item
        android:id="@+id/action_load_pages"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/load_pages"/>
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>
    
    <item
        android:id="@+id/action_reset_pages"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/reset_pages"/>

</menu>
